# cpp_tutorials

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  clang_format.sh
.github/workflows/: cmake.yml  docker-build.yml  windows-build.yml
.trunk/: trunk.yaml
CMake_Tutorials/: README.md
CMake_Tutorials/Creating_Librares/: CMakeLists.txt
CMake_Tutorials/Creating_Librares/src/: calc_mean.c
CMake_Tutorials/Linking_to_Libraries/: CMakeLists.txt
CMake_Tutorials/Linking_to_Libraries/lib/: libmean.so.1
CMake_Tutorials/Linking_to_Libraries/src/: main.c
CMake_Tutorials/project/: CMakeLists.txt
CMake_Tutorials/project/src/: CMakeLists.txt
CMake_Tutorials/project/tests/: CMakeLists.txt  test1.cpp
docs/: PIMPL.md  RAII.md  REST_API _microservices.md  RTTI.md  SFINAE.md  VTABLE_and_VPTR.md  aggregate-copy-default-direct-value-zero.md  aggregate-copy-default-direct-value-zero_initialization.md  algorithms.md  align.md  allocator.md  any.md  any_variant_optional.md  argument_dependent_lookup.md  array_span.md  assert.md  asynchronous_programming.md  atomic.md  attribute_specifier_sequence.md  basic_IO_operation.md  big-endian_little-endian.md  bitset_bit_field_bitwise_operations.md  buffer_overflow.md  callable_callbacks.md  callable_objects_function_bind_invoke_lambda.md  callable_objects_function_bind_lambda.md  callbacks.md  cast_Base_to_Derived_to_Base.md  circular_dependencies.md  clang_tidy.md  class_forward_declaration.md  class_special_member_functions.md  conan.md  concepts.md  conditional_compilation.md  const_constexpr_mutable.md  containers.md  copy-and-swap idiom.md  copy-and-swap_idiom.md  copy_constructor_move_constructor.md  (+128 more)
docs/diagrams/uml_diagrams/: basic_io.puml
docs/event_streaming_message/: apache_kafka.md
docs/microservices/: REST_API_microservices.md  REST_API_with_crow.md  grpc.md  mockoon.md  xml_soap.md
docs/system_design/: api_abi_design.md  branch_prediction_simd.md  cache_friendly_design.md  concurrency_patterns.md  configuration_management.md  dependency_injection.md  design_a_reusable_library.md  design_patterns.md  designing_for_testability.md  distributed_systems_patterns.md  embedded_systems.md  error_handling_strategies.md  event_driven_state_machines.md  exception_safety_guarantees.md  false_sharing_numa.md  game_engine_architecture.md  hpc_patterns.md  ipc_shared_memory.md  lock_free_data_structures.md  memory_management.md  modular_design.md  observability.md  pipeline_dataflow.md  plugin_architecture.md  realtime_systems.md  resource_management_patterns.md  serialization.md  solid_principles.md  testing_strategies.md
src/: CRTP.cpp  RAII.cpp  RVO_NRVO_copy_elision.cpp  SFINAE.cpp  VTABLE_and_VPTR  VTABLE_and_VPTR.cpp  VTABLE_and_VPTR.md  add.cpp  aggregate_initialization.cpp  algorithms_library.cpp  align.cpp  allocator.cpp  any.cpp  argument_dependent_lookup.cpp  arguments_parser.cpp  arguments_parser.hpp  arguments_parser_example.cpp  arrays  arrays.cpp  assert.cpp  asynchronous_programming.cpp  basic_IO_operation_filesystem_streams_reading_writing_files_formating_output_cin_cout_scanf_printf_gets_puts_getline.cpp  basic_IO_operation_streams_reading_writing_files_formating_output_cin_cout_scanf_printf_gets_puts_getline.cpp  basic_input_output_cin_scanf_gets_getline_printf.cpp  bind.cpp  bitset.cpp  bitset_bit_field.cpp  bitwise_operations.cpp  buffer_overflow.cpp  callbacks.cpp  cast.cpp  conditional_compilation.cpp  const_constexpr_mutable.cpp  containers.cpp  copy_and_swap.cpp  copy_constructor_copy_assignment.cpp  copy_initialization.cpp  core_dump.cpp  cpp_17.cpp  cpp_20.cpp  (+95 more)
src/class/: abstract_class_vs_interface.cpp  cast_Base_to_Derived_to_Base.cpp  class_forward_declaration.md  constructor_initialization_list  constructor_initialization_list.cpp  constructor_initializationlist.cpp  copy_constructor_move_constructor.md  copy_move.cpp  default_0_delete_meaning.cpp  diamond_problem_virtual_inheritance.cpp  explicit_constructor.cpp  friend_functions.cpp  inheritance.cpp  multiple_inheritance_polymorphism.cpp  object_slicing.cpp  operator_overloading.cpp  passing_arg_to_parent_constructor.cpp  private_public_protected_inheritance.cpp  protected_friend_class_function.cpp  shadowing.cpp  static_member_function.cpp  virtual_copy_constructor_destructor.cpp  virtual_copy_constructor_destructor.md  virtual_destructor_virtual_constructor.cpp  virtual_destructors.cpp  virtual_function_abstract_class.cpp  virtual_function_abstract_class.md
src/class/Circular_Dependency/: a.cpp  a.hpp  b.cpp  b.hpp  c.hpp  circular_dependency.cpp
src/class/circular_dependency/: circular_dependency.cpp  classA.cpp  classA.hpp  classB.cpp  classB.hpp
src/class/header_guard/: add.h  main.cpp  mymath.h  subtract.h
src/data/: data.csv
src/microservices/: CMakeLists.txt
src/microservices/REST/: CMakeLists.txt  vcpkg.json
src/microservices/REST/src/: main.cpp  order_service.cpp  payment_service.cpp  product_service.cpp  user_service.cpp
src/microservices/grpc/: CMakeLists.txt  vcpkg.json
src/microservices/proto/: calculator.proto
src/microservices/src/: client.cpp  server.cpp
src/multithreading/: README.dm  README.md  async_future_promise.cpp  condition_variable.cpp  creating_and_terminating_threads.cpp  dead_lock.cpp  differentiating_between_threads.cpp  inter_process_communicationshared_memory.cpp  join_detach_threads.cpp  lock_guard.cpp  mutex.cpp  packaged_task.cpp  race_condition.cpp  scoped_lock.cpp  semaphor.cpp  sleeping_threads.cpp  thread_callable_objects.cpp  thread_memory_error_detector.cpp  thread_safe.cpp  unique_lock.cpp
src/optimizing_cpp/: README.dm  index.cpp
src/pimpl/: main.cpp  student.hpp  studentpimpl.cpp  studentpimpl.hpp
src/pointers/: README.md  pointers.cpp
src/sandbox/: CMakeLists.txt
src/sandbox/src/: main.cpp
src/third_party_tools/benchmark/: benchmark_demo.cpp
src/third_party_tools/data/: config.yaml  data.json  data.yaml
src/third_party_tools/xml/: book.xsl  xml.md
(+8 files in other folders)
